<resources>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="app_name">Fender</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="acceder">Access</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="Recomendacion">Don\'t have an account? Sign Up</string>
    <string name="Olvidar_Contraseña">Forgot your password?</string>
    <string name="Fender">Fender</string>
    <string name="title_activity_favorito">FavoritoActivity</string>
    <string name="fav">Favourite</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="imagensdaas">Imagensdaas</string>
    <string name="cambio">Change</string>
    <string name="fondoContacto">backgroundContact</string>

    <string name="Muñeco">Muneco</string>
    <string name="apodo">alias</string>
    <string name="botonNacer">Choose birthdate:</string>
    <string name="Registrarbtn">Register</string>
    <string name="btn_acceder">Acces</string>
    <string name="fechNacer">Birthdate choosen:</string>
    <string name="descripcion_boton_seleccionar_fecha">"description "</string>
    <string name="Registro">Register</string>

    <string name="nocorreo">Correo inválido</string>
    <string name="registro">Register</string>
    <string name="ok">OK</string>
    <string name="nuevacontra">Between 5 and 10 characters</string>
    <string name="contraCoinci">Need password 1 and password 2 be the same password</string>
    <string name="nuevocorreo">Pleas, valid email</string>
    <string name="nocontra">Incorrect password</string>
    <string name="Telefono">+34 631 87 21 17</string>
    <string name="correoFender">fender@gmail.com</string>
    <string name="call">Call</string>
    <string name="correoContacto">Email</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="ubicacion">Ubication</string>
    <string name="mapa">Map image</string>
    <string name="TextoContacto">Contact with us</string>
    <string name="MapaText">Come with us</string>
    <string name="hello_blank_fragment">HOLA</string>
    <string name="Scaffold">Scaffold</string>
    <string name="atras">Back</string>
    <string name="logout">Log Out</string>
    <string name="calendario">Calendary</string>
    <string name="imagenusuario">imagenUsuario</string>
    <string name="usuario">Usuario</string>
    <string name="button">Button</string>

    <string name="NOAPP">No hay app</string>
    <string name="fechaFormato">%1$d/%2$d/%3$d</string>
</resources>
