<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:background="@drawable/fondoguitarra"
             tools:context=".FragmentLogin">

    <ImageView
            android:id="@+id/Logo"
            android:layout_width="273dp"
            android:layout_height="135dp"
            android:contentDescription="@string/Fender"
            app:srcCompat="@drawable/pngegg__1_"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#45FFFFFF"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="48dp"
            app:layout_constraintHorizontal_bias="0.54"
            tools:ignore="ImageContrastCheck"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="Obligatorio*"
            app:helperTextTextColor="#fff"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="280dp"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextoEmail"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E7E6E6"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHint="#1B1B1B"
                android:textColor="#000000"
                android:padding="12dp"
                tools:ignore="VisualLintTextFieldSize"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E7E6E6"
                android:hint="@string/password"

                android:inputType="textPassword"
                android:textColorHint="#1B1B1B"
                android:textColor="#000"
                android:padding="12dp" tools:ignore="VisualLintTextFieldSize"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/loginButton"
            android:layout_width="184dp"
            android:layout_height="51dp"
            android:text="@string/acceder"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#402E34"
            android:textColor="#FFFFFF" app:layout_constraintHorizontal_bias="0.426"/>
    <Button
            android:id="@+id/googleButton"
            android:layout_width="159dp"
            android:layout_height="58dp"
            android:text="@string/google"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="#DB4437"
            android:textColor="#000000"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            app:icon="@drawable/google"
            app:iconSize="30dp"
            app:iconGravity="start"
            app:iconTintMode="multiply"/>
    <Button
            android:id="@+id/facebookButton"
            android:layout_width="159dp"
            android:layout_height="58dp"
            android:text="@string/facebook"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toEndOf="@id/googleButton"
            android:layout_marginStart="12dp"
            android:backgroundTint="#7899E6"
            android:textColor="#263238"
            android:layout_marginTop="12dp" app:icon="@drawable/facebook" app:iconSize="35dp"
            app:iconTintMode="multiply" app:iconGravity="start"/>

    <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Recomendacion"
            android:textColor="#ffff"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/facebookButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/recoverPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Olvidar_Contraseña"
            android:textColor="#FFFFFF"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/registerTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/Login"
            android:textSize="25sp"
            android:layout_width="72dp"
            android:layout_height="39dp"
            android:id="@+id/TextoLogin"
            android:background="#fff"
            app:layout_constraintTop_toBottomOf="@id/Logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.047"
            android:layout_marginTop="24dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>