<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:background="#7EA20D0D"
             tools:context=".RegistroFragment">

    <ImageView
            android:layout_width="210dp"
            android:layout_height="85dp" app:srcCompat="@drawable/pngegg__1_" android:id="@+id/imageAmazon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintVertical_bias="0.028" android:contentDescription="@string/Fender"/>
    <ImageView
            android:layout_width="121dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/usuario"
            android:id="@+id/imageLogin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.983"
            app:layout_constraintVertical_bias="0.125"
            android:contentDescription="@string/Muñeco"/>

    <TextView
            android:id="@+id/TextReg"
            android:layout_width="216dp"
            android:layout_height="72dp"
            android:text="@string/Registro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:textSize="45sp"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:typeface="normal"
            android:textColor="#000"
            app:layout_constraintHorizontal_bias="0.102"/>
    <Button
            android:text="@string/google"
            android:layout_width="159dp"
            android:layout_height="60dp"
            android:id="@+id/botonGoogle"
            android:hint="@string/google"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintVertical_bias="0.858"
            android:textSize="20sp"
            app:icon="@drawable/google"
            app:iconTintMode="multiply" app:iconSize="28dp" android:backgroundTint="#4CFF0000"/>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            app:cursorColor="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeWidth="2dp"
            android:inputType="textEmailAddress"
            android:background="#69A6BF8D"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                android:textColor="#CCCCCC"
                android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:cursorColor="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeWidth="2dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.482"
            android:background="#69A6BF8D"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:textColor="#CCCCCC"
                android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <!--posicion de los mensajes de alerta toast-->


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:cursorColor="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.6"
            android:background="#69A6BF8D"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" android:textColor="#CCCCCC"
                android:textColorHint="@color/white" android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:text="@string/Registrarbtn"
            android:layout_width="159dp"
            android:layout_height="60dp"
            android:id="@+id/botonRegistrar"
            android:hint="@string/Registrarbtn"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.858" app:layout_constraintHorizontal_bias="0.9"
            android:textSize="20sp" android:backgroundTint="#976A2B" android:textColor="#FFFCFC"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/atras"
            android:layout_width="109dp"
            android:layout_height="53dp"
            android:id="@+id/botonAtras"
            android:hint="@string/atras"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.972"
            app:layout_constraintHorizontal_bias="0.501"
            android:textSize="20sp"
            android:backgroundTint="#4C8CEDBD"
            android:textColor="#FFFCFC"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/fechNacer"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="319dp"
            android:layout_height="56dp"
            android:background="#69D9E2D1"
            android:id="@+id/textoFechaSeleccionada"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintVertical_bias="0.729"/>
    <ImageView
            android:src="@drawable/calendario"
            android:layout_width="50dp"
            android:contentDescription="@string/calendario"
            android:layout_height="50dp"
            android:id="@+id/botonSeleccionarFecha"
            app:layout_constraintStart_toStartOf="@+id/textoFechaSeleccionada"
            app:layout_constraintEnd_toEndOf="@+id/textoFechaSeleccionada"
            app:layout_constraintHorizontal_bias="0.959"
            app:layout_constraintBottom_toBottomOf="@+id/textoFechaSeleccionada"/>

</androidx.constraintlayout.widget.ConstraintLayout>